# gaga

./: .gitignore  CMakeLists.txt
include/ga/core/: ga.h  gene.h  model.h  policy.h
include/gaga/: gaga.h
src/: ga.cpp
src/core/: ga.cpp  policy.cpp
test/: test_ga.cpp  test_gaga.cpp
